# IT--

./: README.md
Task_0/: CMakeLists.txt  main.cpp
Task_1/: CMakeLists.txt  Fingerprint.cpp  Fingerprint.hpp  main.cpp
Task_2/: CMakeLists.txt
Task_2/recieve/: CMakeLists.txt  recieve.cpp  recieve.hpp
Task_2/send/: CMakeLists.txt  send.cpp  send.hpp
